{
  "version": 4,
  "terraform_version": "1.4.1",
  "serial": 1,
  "lineage": "15d8439d-4f1d-49ef-a24d-c227ae154297",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_forward",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:376129851708:security-group/sg-09c19ee0adb13af38",
            "description": "Controls access to the ALB (HTTP/HTTPS)",
            "egress": [],
            "id": "sg-09c19ee0adb13af38",
            "ingress": [],
            "name": "cursive-team-connections",
            "name_prefix": "",
            "owner_id": "376129851708",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cursive-team-connections",
              "Namespace": "cursive-team"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "cursive-team-connections",
              "Namespace": "cursive-team"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f19c561536a6e14c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3856590109",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09c19ee0adb13af38",
            "security_group_rule_id": "sgr-0f2f4587ee09ab60b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2246433921",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09c19ee0adb13af38",
            "security_group_rule_id": "sgr-04fc11b8101bef5d2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_alb_service_task",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:376129851708:security-group/sg-0cec94377c0ff2316",
            "description": "Allow ALL egress from ECS service",
            "egress": [],
            "id": "sg-0cec94377c0ff2316",
            "ingress": [],
            "name": "cursive-team-connections-service",
            "name_prefix": "",
            "owner_id": "376129851708",
            "revoke_rules_on_delete": false,
            "tags": {
              "Attributes": "service",
              "Name": "cursive-team-connections-service",
              "Namespace": "cursive-team"
            },
            "tags_all": {
              "Attributes": "service",
              "ManagedBy": "Terraform",
              "Name": "cursive-team-connections-service",
              "Namespace": "cursive-team"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f19c561536a6e14c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs_alb_service_task",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow inbound traffic from ALB",
            "from_port": 8080,
            "id": "sgrule-2489172228",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cec94377c0ff2316",
            "security_group_rule_id": "sgr-00adfc0fd94bd0133",
            "self": false,
            "source_security_group_id": "sg-09c19ee0adb13af38",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.default",
            "module.ecs_alb_service_task.aws_security_group.ecs_service",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_alb_service_task",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic to any IPv4 address",
            "from_port": 0,
            "id": "sgrule-1773107380",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0cec94377c0ff2316",
            "security_group_rule_id": "sgr-050b22f245ae4f805",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs_alb_service_task.aws_security_group.ecs_service",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "data",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.subnets",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07aa3bfd3c99cd1ce",
            "arn": "arn:aws:ec2:ap-southeast-1:376129851708:elastic-ip/eipalloc-07aa3bfd3c99cd1ce",
            "domain": "vpc",
            "id": "eipalloc-07aa3bfd3c99cd1ce",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-3-1-193-31.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "3.1.193.31",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Attributes": "nat",
              "Name": "cursive-team-connections-nat-apse1a",
              "Namespace": "cursive-team"
            },
            "tags_all": {
              "Attributes": "nat",
              "ManagedBy": "Terraform",
              "Name": "cursive-team-connections-nat-apse1a",
              "Namespace": "cursive-team"
            },
            "vpc": true
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07aa3bfd3c99cd1ce",
            "association_id": "eipassoc-0062c13016bcd57f9",
            "connectivity_type": "public",
            "id": "nat-0c65ac7c5771d6931",
            "network_interface_id": "eni-0bb54724d678cc01c",
            "private_ip": "10.0.108.51",
            "public_ip": "3.1.193.31",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07c4a07d0fc1d4129",
            "tags": {
              "Attributes": "nat",
              "Name": "cursive-team-connections-nat-apse1a",
              "Namespace": "cursive-team"
            },
            "tags_all": {
              "Attributes": "nat",
              "ManagedBy": "Terraform",
              "Name": "cursive-team-connections-nat-apse1a",
              "Namespace": "cursive-team"
            }
          },
          "dependencies": [
            "module.subnets.aws_eip.default",
            "module.subnets.aws_eip_association.nat_instance",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_eip.nat",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:376129851708:network-acl/acl-051814c5a7638925c",
            "egress": [],
            "id": "acl-051814c5a7638925c",
            "ingress": [],
            "owner_id": "376129851708",
            "subnet_ids": [
              "subnet-015af7558ff994b6b",
              "subnet-0600de66cfb0562ca",
              "subnet-0f639eb0d974b7151"
            ],
            "tags": {
              "Attributes": "private",
              "Name": "cursive-team-connections-private",
              "Namespace": "cursive-team"
            },
            "tags_all": {
              "Attributes": "private",
              "ManagedBy": "Terraform",
              "Name": "cursive-team-connections-private",
              "Namespace": "cursive-team"
            },
            "vpc_id": "vpc-0f19c561536a6e14c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:376129851708:network-acl/acl-08fc43647739de756",
            "egress": [],
            "id": "acl-08fc43647739de756",
            "ingress": [],
            "owner_id": "376129851708",
            "subnet_ids": [
              "subnet-058c76c3f5e3c86b8",
              "subnet-07c4a07d0fc1d4129",
              "subnet-087a26b3e54edbd75"
            ],
            "tags": {
              "Attributes": "public",
              "Name": "cursive-team-connections-public",
              "Namespace": "cursive-team"
            },
            "tags_all": {
              "Attributes": "public",
              "ManagedBy": "Terraform",
              "Name": "cursive-team-connections-public",
              "Namespace": "cursive-team"
            },
            "vpc_id": "vpc-0f19c561536a6e14c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private4_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1333726252",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-051814c5a7638925c",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_network_acl.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private4_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1766445170",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-051814c5a7638925c",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_network_acl.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public4_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3403871573",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-08fc43647739de756",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_network_acl.public",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public4_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1075151891",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-08fc43647739de756",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_network_acl.public",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09d720a0cbe463b941080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c65ac7c5771d6931",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09d720a0cbe463b94",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": "10m",
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_eip.default",
            "module.subnets.aws_eip_association.nat_instance",
            "module.subnets.aws_nat_gateway.default",
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_eip.nat",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b524ebb7b31e724f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c65ac7c5771d6931",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b524ebb7b31e724f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": "10m",
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_eip.default",
            "module.subnets.aws_eip_association.nat_instance",
            "module.subnets.aws_nat_gateway.default",
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_eip.nat",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b3c21d1009ffb4a71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c65ac7c5771d6931",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b3c21d1009ffb4a7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": "10m",
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_eip.default",
            "module.subnets.aws_eip_association.nat_instance",
            "module.subnets.aws_nat_gateway.default",
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_eip.nat",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-039d3cb92aa8c058f",
            "id": "r-rtb-0fe070c00f719d3991080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fe070c00f719d399",
            "state": "active",
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:376129851708:route-table/rtb-09d720a0cbe463b94",
            "id": "rtb-09d720a0cbe463b94",
            "owner_id": "376129851708",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "private",
              "Name": "cursive-team-connections-private-apse1a",
              "Namespace": "cursive-team"
            },
            "tags_all": {
              "Attributes": "private",
              "ManagedBy": "Terraform",
              "Name": "cursive-team-connections-private-apse1a",
              "Namespace": "cursive-team"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f19c561536a6e14c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:376129851708:route-table/rtb-0b524ebb7b31e724f",
            "id": "rtb-0b524ebb7b31e724f",
            "owner_id": "376129851708",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "private",
              "Name": "cursive-team-connections-private-apse1b",
              "Namespace": "cursive-team"
            },
            "tags_all": {
              "Attributes": "private",
              "ManagedBy": "Terraform",
              "Name": "cursive-team-connections-private-apse1b",
              "Namespace": "cursive-team"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f19c561536a6e14c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:376129851708:route-table/rtb-0b3c21d1009ffb4a7",
            "id": "rtb-0b3c21d1009ffb4a7",
            "owner_id": "376129851708",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "private",
              "Name": "cursive-team-connections-private-apse1c",
              "Namespace": "cursive-team"
            },
            "tags_all": {
              "Attributes": "private",
              "ManagedBy": "Terraform",
              "Name": "cursive-team-connections-private-apse1c",
              "Namespace": "cursive-team"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f19c561536a6e14c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:376129851708:route-table/rtb-0fe070c00f719d399",
            "id": "rtb-0fe070c00f719d399",
            "owner_id": "376129851708",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "public",
              "Name": "cursive-team-connections-public",
              "Namespace": "cursive-team"
            },
            "tags_all": {
              "Attributes": "public",
              "ManagedBy": "Terraform",
              "Name": "cursive-team-connections-public",
              "Namespace": "cursive-team"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f19c561536a6e14c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6a8efeaa4f01e00",
            "route_table_id": "rtb-09d720a0cbe463b94",
            "subnet_id": "subnet-0600de66cfb0562ca"
          },
          "dependencies": [
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8a079ef556df10a",
            "route_table_id": "rtb-0b524ebb7b31e724f",
            "subnet_id": "subnet-0f639eb0d974b7151"
          },
          "dependencies": [
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a760af14683448dd",
            "route_table_id": "rtb-0b3c21d1009ffb4a7",
            "subnet_id": "subnet-015af7558ff994b6b"
          },
          "dependencies": [
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0453fc817179fdf3d",
            "route_table_id": "rtb-0fe070c00f719d399",
            "subnet_id": "subnet-07c4a07d0fc1d4129"
          },
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06384254ea63389ba",
            "route_table_id": "rtb-0fe070c00f719d399",
            "subnet_id": "subnet-058c76c3f5e3c86b8"
          },
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095345dd1462723f0",
            "route_table_id": "rtb-0fe070c00f719d399",
            "subnet_id": "subnet-087a26b3e54edbd75"
          },
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:376129851708:subnet/subnet-0600de66cfb0562ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0600de66cfb0562ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "376129851708",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "private",
              "Name": "cursive-team-connections-private-apse1a",
              "Namespace": "cursive-team"
            },
            "tags_all": {
              "Attributes": "private",
              "ManagedBy": "Terraform",
              "Name": "cursive-team-connections-private-apse1a",
              "Namespace": "cursive-team"
            },
            "timeouts": {
              "create": "10m",
              "delete": "20m"
            },
            "vpc_id": "vpc-0f19c561536a6e14c"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:376129851708:subnet/subnet-0f639eb0d974b7151",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f639eb0d974b7151",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "376129851708",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "private",
              "Name": "cursive-team-connections-private-apse1b",
              "Namespace": "cursive-team"
            },
            "tags_all": {
              "Attributes": "private",
              "ManagedBy": "Terraform",
              "Name": "cursive-team-connections-private-apse1b",
              "Namespace": "cursive-team"
            },
            "timeouts": {
              "create": "10m",
              "delete": "20m"
            },
            "vpc_id": "vpc-0f19c561536a6e14c"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:376129851708:subnet/subnet-015af7558ff994b6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015af7558ff994b6b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "376129851708",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "private",
              "Name": "cursive-team-connections-private-apse1c",
              "Namespace": "cursive-team"
            },
            "tags_all": {
              "Attributes": "private",
              "ManagedBy": "Terraform",
              "Name": "cursive-team-connections-private-apse1c",
              "Namespace": "cursive-team"
            },
            "timeouts": {
              "create": "10m",
              "delete": "20m"
            },
            "vpc_id": "vpc-0f19c561536a6e14c"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:376129851708:subnet/subnet-07c4a07d0fc1d4129",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c4a07d0fc1d4129",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "376129851708",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "public",
              "Name": "cursive-team-connections-public-apse1a",
              "Namespace": "cursive-team"
            },
            "tags_all": {
              "Attributes": "public",
              "ManagedBy": "Terraform",
              "Name": "cursive-team-connections-public-apse1a",
              "Namespace": "cursive-team"
            },
            "timeouts": {
              "create": "10m",
              "delete": "20m"
            },
            "vpc_id": "vpc-0f19c561536a6e14c"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:376129851708:subnet/subnet-058c76c3f5e3c86b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.128.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058c76c3f5e3c86b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "376129851708",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "public",
              "Name": "cursive-team-connections-public-apse1b",
              "Namespace": "cursive-team"
            },
            "tags_all": {
              "Attributes": "public",
              "ManagedBy": "Terraform",
              "Name": "cursive-team-connections-public-apse1b",
              "Namespace": "cursive-team"
            },
            "timeouts": {
              "create": "10m",
              "delete": "20m"
            },
            "vpc_id": "vpc-0f19c561536a6e14c"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:376129851708:subnet/subnet-087a26b3e54edbd75",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.160.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087a26b3e54edbd75",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "376129851708",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "public",
              "Name": "cursive-team-connections-public-apse1c",
              "Namespace": "cursive-team"
            },
            "tags_all": {
              "Attributes": "public",
              "ManagedBy": "Terraform",
              "Name": "cursive-team-connections-public-apse1c",
              "Namespace": "cursive-team"
            },
            "timeouts": {
              "create": "10m",
              "delete": "20m"
            },
            "vpc_id": "vpc-0f19c561536a6e14c"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:376129851708:security-group/sg-02e84c86adb0fe5a8",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-02e84c86adb0fe5a8",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "376129851708",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cursive-team-connections-default",
              "Namespace": "cursive-team"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "cursive-team-connections-default",
              "Namespace": "cursive-team"
            },
            "vpc_id": "vpc-0f19c561536a6e14c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:376129851708:internet-gateway/igw-039d3cb92aa8c058f",
            "id": "igw-039d3cb92aa8c058f",
            "owner_id": "376129851708",
            "tags": {
              "Name": "cursive-team-connections",
              "Namespace": "cursive-team"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "cursive-team-connections",
              "Namespace": "cursive-team"
            },
            "vpc_id": "vpc-0f19c561536a6e14c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:376129851708:vpc/vpc-0f19c561536a6e14c",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-036d39281dc96c1b0",
            "default_route_table_id": "rtb-0d0debe7f1ecd0128",
            "default_security_group_id": "sg-02e84c86adb0fe5a8",
            "dhcp_options_id": "dopt-0d10a034f82a15302",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f19c561536a6e14c",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-042f95d17cd15bc2c",
            "ipv6_cidr_block": "2406:da18:fc2:300::/56",
            "ipv6_cidr_block_network_border_group": "ap-southeast-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d0debe7f1ecd0128",
            "owner_id": "376129851708",
            "tags": {
              "Name": "cursive-team-connections",
              "Namespace": "cursive-team"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "cursive-team-connections",
              "Namespace": "cursive-team"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}